--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://coach-g.github.io/to-do",
+  "homepage": "http://coach-g.github.io/to-do",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
